0.1.2:
- Added active redstone block
- Fix repeater placement
- Fix repeater rendering
- Fix pistons updating before pushing
- Allow render components to be placed on glass and slabs
- Fix repeater drops
- Add redstone lamp
- Make liquids replacable by pistons

0.1.1:
- Fix 1-tick pistons
- Implement repeaters (no rendering however)
- Disable le poisson
- First public source release
- Fixed buckets no longer clipping (bug with sword swing through)
- Fixed lava texture no longer being animated (bug with conveyor rendering)

0.1.0:
- April fools!
- First public release