@@ -1,3 +1,5 @@
+#include <dlfcn.h>
+
 #include "api.h"
 
 CompoundTag *CompoundTag_getCompound_but_not(CompoundTag *self, const std::string &name) {
@@ -20,3 +22,17 @@ bool is_fish() {
     return t == 1;
 }
 #endif
+
+// Hack for backwards compat with pre-3.0.0, sane 3.0.0, and this weird new 3.0.0
+void misc_add_message(Gui *gui, const char *text) {
+    typedef decltype(misc_add_message) *misc_add_message_t;
+    static misc_add_message_t original = (misc_add_message_t) dlsym(RTLD_NEXT, "misc_add_message");
+    if (!original) {
+        // Call the new one :(
+        std::string str = text;
+        Gui_addMessage(gui, &str);
+    } else {
+        // Call the old one :D
+        original(gui, text);
+    }
+}
