@@ -5,20 +5,20 @@
 #include <cstring>
 
 #define _HOOK_FROM_CALL(call, ret, name, args, fn_name, prefix) \
-    prefix name##_t fn_name##_original = NULL; \
+    prefix name##_t fn_name##_original_FG6_API = NULL; \
     prefix ret fn_name##_injection args; \
     __attribute__((constructor)) static void fn_name##_hooking_init() { \
-        fn_name##_original = (name##_t) extract_from_bl_instruction((uchar *) call); \
-        overwrite_calls((void *) fn_name##_original, (void *) fn_name##_injection); \
+        fn_name##_original_FG6_API = (name##_t) extract_from_bl_instruction((uchar *) call); \
+        overwrite_calls_manual((void *) fn_name##_original_FG6_API, (void *) fn_name##_injection); \
     } \
     prefix ret fn_name##_injection args
 #define HOOK_FROM_CALL(call, ret, name, args) _HOOK_FROM_CALL(call, ret, name, args, name, static)
 
 #define _HOOK_SINGLE_FROM_CALL(call, ret, name, args, fn_name, prefix) \
-    prefix name##_t fn_name##_original = NULL; \
+    prefix name##_t fn_name##_original_FG6_API = NULL; \
     prefix ret fn_name##_injection args; \
     __attribute__((constructor)) static void fn_name##_hooking_init() { \
-        fn_name##_original = (name##_t) extract_from_bl_instruction((uchar *) call); \
+        fn_name##_original_FG6_API = (name##_t) extract_from_bl_instruction((uchar *) call); \
         overwrite_call((void *) call, (void *) fn_name##_injection); \
     } \
     prefix ret fn_name##_injection args
@@ -35,7 +35,7 @@
 #define _OVERWRITE_CALLS(fn, ret, name, args, prefix) \
     prefix ret name args; \
     __attribute__((constructor)) static void name##_hooking_init() { \
-        overwrite_calls((void *) fn, (void *) name); \
+        overwrite_calls_manual((void *) fn, (void *) name); \
     } \
     prefix ret name args
 #define OVERWRITE_CALLS(fn, ret, name, args) _OVERWRITE_CALLS(fn, ret, name, args, static)
@@ -99,3 +99,6 @@ for j in i:
 // The most important function
 bool is_fish();
 #endif
+
+// Hack for backwards compat with pre-3.0.0, sane 3.0.0, and this weird new 3.0.0
+extern "C" void misc_add_message(Gui *gui, const char *text);
