@@ -7,6 +7,7 @@
 - Fix repeater drops
 - Add redstone lamp
 - Make liquids replacable by pistons
+- Update to the weird new 3.0.0 api of [cf6989b](https://github.com/MCPI-Revival/minecraft-pi-reborn/commit/cf6989bed262580e2f90edf938430be1f6f728ff) "I need to sleep, here be dragons", which could have used more sleep and less dragons
 
 0.1.1:
 - Fix 1-tick pistons
